--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -36,7 +36,7 @@
     "* Greek indices refer to four-dimensional quantities where the zeroth component indicates temporal (time) component.\n",
     "* Latin indices refer to three-dimensional quantities. This is somewhat counterintuitive since Python always indexes its lists starting from 0. As a result, the zeroth component of three-dimensional quantities will necessarily indicate the first *spatial* direction.\n",
     "\n",
-    "As a corollary, any expressions in NRPy+ involving mixed Greek and Latin indices will need to offset one set of indices by one; a Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module)."
+    "As a corollary, any expressions in NRPy+ involving mixed Greek and Latin indices will need to offset one set of indices by one; a Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial notebook)."
    ]
   },
   {
