--- a/Tutorial-BSSN_in_terms_of_ADM.ipynb
+++ b/Tutorial-BSSN_in_terms_of_ADM.ipynb
@@ -349,7 +349,7 @@
    "outputs": [],
    "source": [
     "# Step 2.e: Rescale beta^i and B^i according to the prescription described in \n",
-    "#         the [BSSN in curvilinear coordinates tutorial module](Tutorial-BSSNCurvilinear.ipynb) \n",
+    "#         the [BSSN in curvilinear coordinates tutorial notebook](Tutorial-BSSNCurvilinear.ipynb) \n",
     "#         (also [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
     "#\n",
     "# \\mathcal{V}^i &= beta^i/(ReU[i])\n",
@@ -392,7 +392,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Consistency check between this tutorial module and BSSN.BSSN_in_terms_of_ADM NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "Consistency check between this tutorial notebook and BSSN.BSSN_in_terms_of_ADM NRPy+ module: ALL SHOULD BE ZERO.\n",
       "cf - BitoA.cf = 0\n",
       "trK - BitoA.trK = 0\n",
       "vetU[0] - BitoA.vetU[0] = 0\n",
@@ -450,7 +450,7 @@
     "BitoA.betU_vetU(                        uibh.betaSphU,uibh.BSphU)\n",
     "\n",
     "# Step 3.e: Perform the consistency check\n",
-    "print(\"Consistency check between this tutorial module and BSSN.BSSN_in_terms_of_ADM NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "print(\"Consistency check between this tutorial notebook and BSSN.BSSN_in_terms_of_ADM NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "print(\"cf - BitoA.cf = \" + str(cf - BitoA.cf))\n",
     "print(\"trK - BitoA.trK = \" + str(trK - BitoA.trK))\n",
