--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -409,7 +409,7 @@
     "## Step 2.a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels. \\[Back to [top](#toc)\\]\n",
     "$$\\label{einstein_c}$$\n",
     "\n",
-    "Now that we have generated the C code kernel `GiRaFFE_RHSs.h` and the parameters file `NRPy_params.h`, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial module](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in `schedule.ccl` below).\n",
+    "Now that we have generated the C code kernel `GiRaFFE_RHSs.h` and the parameters file `NRPy_params.h`, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial notebook](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in `schedule.ccl` below).\n",
     "\n",
     "Also, we will write the logic that determines which files are called where in order to calculate $B^i$ here. \n",
     "\n",
