--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -25,7 +25,7 @@
     "**Validation Notes:** This module has been validated against the hand-written smallbPoynET in WVUThorns_diagnostics (a trsuted code), which itself is based on expressions in IllinoisGRMHD... which was validated against the original GRMHD code of the Illinois NR group.\n",
     "\n",
     "## Introduction:\n",
-    "In the [previous tutorial module](Tutorial-u0_smallb_Poynting-Cartesian.ipynb), we constructed within SymPy full expressions for the 4-velocity time-component $u^0$, the magnetic field (measured by a comoving observer) $b^{\\mu}$, and the Poynting vector $S^i$.\n",
+    "In the [previous tutorial notebook](Tutorial-u0_smallb_Poynting-Cartesian.ipynb), we constructed within SymPy full expressions for the 4-velocity time-component $u^0$, the magnetic field (measured by a comoving observer) $b^{\\mu}$, and the Poynting vector $S^i$.\n",
     "\n",
     "Here we will work through the steps necessary to construct an Einstein Toolkit diagnostic thorn (module) that uses ADMBase and HydroBase variables as input into the NRPy+-generated SymPy expressions for $b^{\\mu}$, $b^2$, and the Poynting Vector $S^i$, outputting to gridfunctions `smallb4U[]`, `smallb2etk` (the \"etk\" suffix must be appended because base gridfunction names ending in numbers are not allowed in NRPy+), and `SPoyn[]`, respectively. "
    ]
@@ -360,7 +360,7 @@
     "\n",
     "The second parameter determines how often we will calculate $b^\\mu$, $b^2$, and $S^i$.\n",
     "\n",
-    "The third parameter sets the maximum allowed Lorentz factor when computing $u^0$ (i.e., $\\Gamma_{\\rm max}$, as defined in the [previous tutorial module](Tutorial-u0_smallb_Poynting-Cartesian.ipynb))."
+    "The third parameter sets the maximum allowed Lorentz factor when computing $u^0$ (i.e., $\\Gamma_{\\rm max}$, as defined in the [previous tutorial notebook](Tutorial-u0_smallb_Poynting-Cartesian.ipynb))."
    ]
   },
   {
