--- a/Tutorial-GRHD_Equations-Cartesian-new.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-new.ipynb
@@ -91,7 +91,7 @@
     "        betaD[i] += gammaDD[i][j] * betaU[j]\n",
     "```\n",
     "\n",
-    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module). This can be seen when we handle $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$:\n",
+    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial notebook). This can be seen when we handle $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$:\n",
     "```python\n",
     "# \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} / 2\n",
     "for i in range(DIM):\n",
@@ -513,7 +513,7 @@
     "\n",
     "This conversion is a bit subtle, as truncation error on $v^i$ may result in a superluminal or ultrarelativistic velocity, which in either case a GRHD code cannot handle reliably.\n",
     "\n",
-    "As described in the [`GiRaFFE` $\\tilde{S}_i$ tutorial module](Tutorial-GiRaFFE_NRPy_Ccode_library-S_tilde-flux.ipynb#speed_limit), we have already devised an algorithm for computing $u^\\mu$ from $v_{(n)}^i$, the Valencia 3-velocity, defined as (Eq 11 in the IllinoisGRMHD paper)\n",
+    "As described in the [`GiRaFFE` $\\tilde{S}_i$ tutorial notebook](Tutorial-GiRaFFE_NRPy_Ccode_library-S_tilde-flux.ipynb#speed_limit), we have already devised an algorithm for computing $u^\\mu$ from $v_{(n)}^i$, the Valencia 3-velocity, defined as (Eq 11 in the IllinoisGRMHD paper)\n",
     "\n",
     "$$\n",
     "v^i_{(n)} = \\frac{1}{\\alpha}\\left(v^i + \\beta^i\\right).\n",
