--- a/Tutorial-GiRaFFE_Higher_Order_v2.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order_v2.ipynb
@@ -66,7 +66,7 @@
     "        betaD[i] += gammaDD[i][j] * betaU[j]\n",
     "```\n",
     "\n",
-    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module). This can be seen when we handle the second term of [$\\partial_t \\tilde{S}_i$](#construct_si) (or, more specifically, the second term thereof: $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$):\n",
+    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial notebook). This can be seen when we handle the second term of [$\\partial_t \\tilde{S}_i$](#construct_si) (or, more specifically, the second term thereof: $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$):\n",
     "```\n",
     "# The second term: \\alpha \\sqrt{\\\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} / 2\n",
     "for i in range(DIM):\n",
