--- a/Tutorial-Template_Style_Guide.ipynb
+++ b/Tutorial-Template_Style_Guide.ipynb
@@ -20,18 +20,18 @@
     "\n",
     "</warning_message> <font color='red'>**This is a warning message, in red text and bolded, to warn anyone using the module that it is, for example, actively in development, not yet validated, etc. Warning messages are optional.**</font>\n",
     "\n",
-    "## </brief_abstract> This module implements a template designed by Brandon Clark to be used as a style guide for all tutorial modules within NRPy+.\n",
+    "## </brief_abstract> This module implements a template designed by Brandon Clark to be used as a style guide for all tutorial notebooks within NRPy+.\n",
     "\n",
     "### </additonal_notes> Items in Markdown code contained within \"</>\" are not included within the output (double click this box to see what I mean). To the run Markdown code simply hit \"Shift + Enter\" or the \"Run\" button above. \n",
     "\n",
     "</validation_notice> <font color='green'>**This text discusses how a module has been validated against other existing code or modules. This text is given a green font color and bolded. See how to bold and make text different colors in the Markdown code.**</font>\n",
     "\n",
     "### </list_source_code> NRPy+ Source Code for this module:\n",
-    "1. [Template_Style_Guide.py](../edit/Template_Style_Guide.py); [\\[**tutorial**\\]](Tutorial-Template_Style_Guide.ipynb) </description_here> This is where you would describe what purpose this source code serves in this module. Read how to correctly link to these source code files/tutorial modules later in []. \n",
+    "1. [Template_Style_Guide.py](../edit/Template_Style_Guide.py); [\\[**tutorial**\\]](Tutorial-Template_Style_Guide.ipynb) </description_here> This is where you would describe what purpose this source code serves in this module. Read how to correctly link to these source code files/tutorial notebooks later in []. \n",
     "1. </additonal_source_code_links__here>\n",
     "\n",
     "## Introduction:\n",
-    "Here you write an introduction that discusses in slight detail the framework of this tutorial module. Here you may reference external works or websites on which pieces of your module rely. It is often helpful to include an enumerated algorihtm to highlight this modules processes. Within the algortihm you may refer to where source code is implemeted as a part of this module. </optional>\n",
+    "Here you write an introduction that discusses in slight detail the framework of this tutorial notebook. Here you may reference external works or websites on which pieces of your module rely. It is often helpful to include an enumerated algorihtm to highlight this modules processes. Within the algortihm you may refer to where source code is implemeted as a part of this module. </optional>\n",
     "\n",
     "The entire </made_up>algorithm is outlined below, with NRPy+-based components highlighted in <font color='green'>green</font>.\n",
     "\n",
@@ -39,7 +39,7 @@
     "1. 1. Discussing [Markdown Linking Protocol](https://medium.com/@sambozek/ipython-er-jupyter-table-of-contents-69bb72cf39d3)\n",
     "    1. Linking to sections internally within the module \n",
     "    1. Linking to external sources\n",
-    "1. No parts of this template tutorial module rely on <font color='green'>NRPy+-based components</font>\n",
+    "1. No parts of this template tutorial notebook rely on <font color='green'>NRPy+-based components</font>\n",
     "1. Converting Jupyter notebook to output LaTex PDF\n",
     "\n",
     "</optional>\n",
@@ -49,7 +49,7 @@
     "Include information relevant to this subsection here.\n",
     "\n",
     "## </other>  Other (Optional): \n",
-    "You may include any number of items here within the first box of the tutorial module, but I suggest being minimalistic when you can. Other sections that have been included in other tutorial moudles are as follows\n",
+    "You may include any number of items here within the first box of the tutorial notebook, but I suggest being minimalistic when you can. Other sections that have been included in other tutorial moudles are as follows\n",
     "    \n",
     "### Note on Notation:\n",
     "When using a new type of notation for the first time within the NRPy+ tutorial, you may want to include some notes on that here.\n",
