--- a/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "This module provides another initial data option for $\\texttt{GiRaFFE}$. This is a flat-spacetime test with initial data $$A_{\\phi} = \\frac{\\mu \\varpi^2}{r^3},$$ where  $\\mu = B_p R^3_{\\rm NS} / 2$, $R_{\\rm NS}$ is the neutron star radius, and $\\varpi = \\sqrt{x^2+y^2}$ is the cylindrical radius. We let $A_r = A_\\theta = 0$.\n",
     "\n",
-    "Additionally, the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. See the [Tutorial-GiRaFFEfood_HO](Tutorial-GiRaFFEfood_HO.ipynb) tutorial module for details on how this is used."
+    "Additionally, the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. See the [Tutorial-GiRaFFEfood_HO](Tutorial-GiRaFFEfood_HO.ipynb) tutorial notebook for details on how this is used."
    ]
   },
   {
