--- a/Tutorial-Start_to_Finish-ScalarWave-SIMD.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave-SIMD.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "## Introduction:\n",
     "\n",
-    "As outlined in the [previous NRPy+ tutorial module](Tutorial-ScalarWave.ipynb), we first use NRPy+ to generate initial data for the scalar wave equation, and then we use it to generate the RHS expressions for [Method of Lines](https://reference.wolfram.com/language/tutorial/NDSolveMethodOfLines.html) time integration based on the [explicit Runge-Kutta fourth-order scheme](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) (RK4).\n",
+    "As outlined in the [previous NRPy+ tutorial notebook](Tutorial-ScalarWave.ipynb), we first use NRPy+ to generate initial data for the scalar wave equation, and then we use it to generate the RHS expressions for [Method of Lines](https://reference.wolfram.com/language/tutorial/NDSolveMethodOfLines.html) time integration based on the [explicit Runge-Kutta fourth-order scheme](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) (RK4).\n",
     "\n",
     "The entire algorithm is outlined below, with NRPy+-based components highlighted in <font color='green'>green</font>.\n",
     "\n",
