GRHD_Equations-Cartesian-new: Add unit tests

--- a/Tutorial-GRHD_Equations-Cartesian-new.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-new.ipynb
@@ -568,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First hydrodynamical quantities\n",
+    "# First define hydrodynamical quantities\n",
     "u4U = ixp.declarerank1(\"u4U\", DIM=4)\n",
     "rho_b,P,epsilon = sp.symbols('rho_b P epsilon',real=True)\n",
     "\n",
