GiRaFFE/Stilde_flux: Fixed bug in notebook for the case of R=0 based on solution given in module.

--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -255,7 +255,12 @@
     "    # Outputs: u^0, speed-limited ValenciavU\n",
     "    \n",
     "    # R = gamma_{ij} v^i v^j\n",
-    "    R = sp.sympify(0)\n",
+    "    R = par.Cparameters(\"#define\",thismodule,\"TINYDOUBLE\",1e-100)\n",
+    "    # We initialize R to TINYDOUBLE instead of 0 to avoid a 0/0 below,\n",
+    "    #    in the case that ValenciavU == 0 for all Valencia 3-velocities.\n",
+    "    # \"Those tiny *doubles* make me warm all over\n",
+    "    #  with a feeling that I'm gonna love you till the end of time.\"\n",
+    "    #    - Adapted from Connie Francis' \"Tiny Bubbles\"\n",
     "    for i in range(DIM):\n",
     "        for j in range(DIM):\n",
     "            R += gammaDD[i][j]*ValenciavU[i]*ValenciavU[j]\n",
@@ -269,11 +274,14 @@
     "    # Now, we set Rmax = min(Rmax,R):\n",
     "    # If Rmax>R, then Rmax = 0.5*(Rmax+R-Rmax+R) = R\n",
     "    # If R>Rmax, then Rmax = 0.5*(Rmax+R+Rmax-R) = Rmax\n",
-    "    Rmax =  sp.Rational(1,2)*(Rmax+R-sp.Abs(Rmax-R))\n",
+    "    # If R==TINYDOUBLE, then Rmax = 0.5*(Rmax-Rmax) = 0, since, e.g., 10 +/- 1e-100 = 10 exactly in double precision    Rmax =  sp.Rational(1,2)*(Rmax+R-sp.Abs(Rmax-R))\n",
     "\n",
     "    # With our rescaled Rmax, v^i = sqrt{Rmax/R} v^i\n",
     "    rescaledValenciavU = ixp.zerorank1()\n",
     "    for i in range(DIM):\n",
+    "        # If R == TINYDOUBLE, then Rmax=0,R=1e-100, and we get Rmax/R=0.\n",
+    "        #   If your velocities are of order 1e-100 and this is physically\n",
+    "        #   meaningful, there must be something wrong with your unit conversion.\n",
     "        rescaledValenciavU[i] = ValenciavU[i]*sp.sqrt(Rmax/R)\n",
     "\n",
     "    # We stick with the \"rescaled\" version since we redefine Rmax as detailed above\n",
