GiRaFFE/A2B: Avoid possible division by 0 in the gammadet generation.

--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B.ipynb
@@ -357,7 +357,7 @@
     "    \n",
     "    for(int i2=0;i2<Nxx_plus_2NGHOSTS[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS[0];i0++) {\n",
     "        //auxevol_gfs[IDX4(GAMMADETGF,i0,i1,i2)] = 1.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4(GAMMADETGF,i0,i1,i2)] = 1.0 + 1.0/(1.0+xx[0][i0]+xx[1][i1]+xx[2][i2]);\n",
+    "        auxevol_gfs[IDX4(GAMMADETGF,i0,i1,i2)] = 1.0 + 1.0/(1.0+xx[0][i0]*xx[0][i0]+xx[1][i1]*xx[1][i1]+xx[2][i2]*xx[2][i2]);\n",
     "    }\n",
     "    \n",
     "    // We now want to set up the vector potential. First, we must set the coefficients. \n",
@@ -526,9 +526,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.C -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 1.21833300591 seconds.\n",
+      "Finished executing in 1.21596002579 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.23079204559 seconds.\n",
+      "Finished in 1.22899484634 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -544,7 +544,7 @@
       "SDA: inf, 13.958, 13.256\n",
       "SDA: 13.958, inf, 13.684\n",
       "SDA: 13.201, 13.958, inf\n",
-      "Finished in 0.0307500362396 seconds.\n",
+      "Finished in 0.0230021476746 seconds.\n",
       "\n",
       "\n"
      ]
